refactor(desktop): add lombok, use var's in network and bg-client